[package]
name = "graph-project"
version = "0.1.0"
edition = "2021"

[dependencies]
agdb = { version = "0.9", default-features = false, features = ["derive"] }
dirs = { version = "5.0.1", default-features = false, features = [] }

[build-dependencies]
temp-dir = { version = "0.1.14", default-features = false, features = [] }

[dependencies.bevy]
version = "0.15.1"
default-features = false
features = [
    "bevy_window",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_picking",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi_threaded",
]

[features]
default = []
wayland = ["bevy/wayland"]
x11 = ["bevy/x11"]

[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
